# parsers

pip/testdata/pipenv/manifestSetupCfg/: Pipfile  setup.cfg
pip/testdata/pipenv/manifestSetupPy/: setup.py
pip/testdata/poetry/manifestSetupCfg/: pyproject.toml  setup.cfg
pip/testdata/poetry/manifestSetupPy/: pyproject.toml  setup.py
pip/testdata/poetry/manifestSetupPy/test_package/: add.py
pip/testdata/pyenv/manifestsetuppy/: pyvenv.cfg  requirements.txt  setup.py
