# setup.cfg file at the root directory
[metadata]
name = test_package
version = 0.1
author = xyz
description = This is an test project
long_description = This is a longer description for the project
keywords = sample, example, setuptools
[options]
python_requires = >=3.4, <4
packages = test_package
install_requires = 
    pandas
    numpy